--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
+    "build1": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build",
     "strapi": "strapi"
   },
   "devDependencies": {},
