--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start --openssl-legacy-provider start",
-    "build": "strapi build --openssl-legacy-provider build",
-    "strapi": "strapi"
+    "develop": "NODE_OPTIONS=--openssl-legacy-provider && strapi develop",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider && strapi",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider && strapi build",
+    "strapi": "NODE_OPTIONS=--openssl-legacy-provider && strapi"
   },
   "devDependencies": {},
   "dependencies": {
