--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "NODE_OPTIONS=--openssl-legacy-provider && strapi develop",
+    "develop": "strapi develop",
     "start": "strapi",
     "build": "NODE_OPTIONS=--openssl-legacy-provider && strapi build",
     "strapi": "strapi"
